--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,29 +15,46 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
+
+      - name: Prepare java
+        uses: actions/setup-java@v4
         with:
           distribution: "temurin"
           java-version: "21"
-      - uses: DeLaGuardo/setup-clojure@13.1
+
+      - name: Install clojure tools
+        uses: DeLaGuardo/setup-clojure@13.1
         with:
           cli: 1.12.0.1501
           lein: 2.11.2
-      - uses: actions/cache@v4
+
+      - name: Cache clojure dependencies
+        uses: actions/cache@v4
         with:
           path: |
             ~/.m2/repository
             ~/.gitlibs
             ~/.deps.clj
-          key: cljdeps-${{ env.CACHE_VERSION }}-${{ hashFiles('project.clj') }}
+          # List all files containing dependencies:
+          key: cljdeps-${{ env.CACHE_VERSION }}-${{ hashFiles('project.clj') }}-${{ hashFiles('deps.edn') }}-${{ hashFiles('bb.edn') }}
           restore-keys: cljdeps-${{ env.CACHE_VERSION }}-
-      - uses: actions/setup-node@v4
+
+      - name: Prepare node
+        uses: actions/setup-node@v4
         with:
           node-version: "23.x"
           check-latest: true
           cache: 'npm'
           cache-dependency-path: "package-lock.json"
-      - run: lein test
-      - run: npm ci
-      - run: npm run build
-      - run: npm test
+
+      - name: Run Clojure tests
+        run: lein test
+
+      - name: Install Node Dependencies
+        run: npm ci
+
+      - name: Compile Tests
+        run: npm run build
+
+      - name: Run Tests
+        run: npm test
