--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
 
       - name: Install ClojureCLR
         run: |
-          dotnet tool install --global Clojure.Main --version 1.12.0-alpha10
+          dotnet tool install --global Clojure.Main --version 1.12.2
           dotnet tool install --global Clojure.Cljr --version 0.1.0-alpha5
 
       - name: Prepare node
