Fix syntax + bump

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Install ClojureCLR
         run: |
           dotnet tool install --global Clojure.Main --version 1.12.2
-          dotnet tool install --global Clojure.Cljr --version 0.1.0-alpha5
+          dotnet tool install --global Clojure.Cljr --version 0.1.0-alpha6
 
       - name: Prepare node
         uses: actions/setup-node@v4
@@ -70,7 +70,7 @@ jobs:
         run: lein test
 
       - name: Run ClojureCLR Tests
-        run: cljr -X:test-cljr
+        run: cljr -X:test
 
       - name: Run babashka tests
         run: bb test-bb
