Run tests in parallel

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -158,4 +158,4 @@ jobs:
           source .venv/bin/activate
           BASILISP_TEST_PATH="$(pwd)/test" \
             BASILISP_TEST_FILE_PATTERN='.*\.(lpy|cljc)' \
-            basilisp test -p test -- --continue-on-collection-errors
+            basilisp test -p test -- -n auto
