Fix bb path conflict in CI
Install babashka dev build to /tmp to avoid conflict with the bb/ directory.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -108,7 +108,7 @@ jobs:
 
       # Use dev build because it contains a fix not yet in a release
       - name: Install babashka dev build
-        run: bash <(curl -s https://raw.githubusercontent.com/babashka/babashka/master/install) --dev-build --dir .
+        run: bash <(curl -s https://raw.githubusercontent.com/babashka/babashka/master/install) --dev-build --dir /tmp
 
       - name: Cache clojure dependencies
         uses: actions/cache@v4
@@ -122,7 +122,7 @@ jobs:
           restore-keys: cljdeps-${{ env.CACHE_VERSION }}-
 
       - name: Run babashka tests
-        run: ./bb test-bb
+        run: /tmp/bb test-bb
 
   test-clr:
     runs-on: ubuntu-latest
